<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16pt">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityHeader"
            style="@style/AppTheme.MainText"
            android:layout_width="wrap_content"
            android:text="@string/city_header"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputCity"
            style="@style/AppTheme.MainText"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/cityHeader"
            android:hint="@string/input_city_hint"
            android:singleLine="true"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/stateHeader"
            style="@style/AppTheme.MainText"
            android:layout_width="wrap_content"
            android:layout_below="@id/cityHeader"
            android:text="@string/state_header"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputState"
            style="@style/AppTheme.MainText"
            android:layout_width="wrap_content"
            android:layout_below="@id/inputCity"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/stateHeader"
            android:hint="@string/input_state_hint"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            android:singleLine="true"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stateHeader"
            android:text="@string/submit"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dailyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>

